wp-content/themes/stereoclub-child/style.css
/*   
Theme Name: StereoClub Child Theme
Theme URI: http://themeforest.net/user/WPlook/portfolio
Description: Use this theme to start your StereoClub Child Theme development.
Author: Victor Tihai
Author URI: http://wplook.com/
Template: stereoclub-wpl
Version: 1.0.0.
*/

@import url('../stereoclub-wpl/style.css');

body, input, textarea {
  color: #333;
  font-size: 14px;
  font-family: 'Titillium Web', sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

h1,h2,h3,h4,h5,h6 {
  clear: both;
  font-family: 'Titillium Web', sans-serif;
  font-weight: 200;
}
h2 {
  font-size: 24px;
  color: #002B65;
  line-height: 1em;
  margin-bottom: 0.3em;
}
h1 {
  font-size: 30px;
}

.widget ul li:hover {
    animation-duration: 0s;
    animation-name: none;
}

.site-header .container_12 .grid_12,
.entry-content,
.widget .textwidget,
.entry-content-list,
.comments,
.widget ul {
  /*background-color: #fff;*/
  background-color: rgba(255, 255, 255, 0.9);
}

.widget ul li,
.latest-item {
  background: none;
}

/*
 * MENU STYLING
*/

#site-navigation {
  margin-top: 0!important;
}

#site-navigation ul li.current_page_item {
  background: #000!important;
}

.site-navigation .menu li a {
  text-transform: none;
  font-size: 20px;
}

.site-navigation ul.menu ul a {
  font-size: 14px;
  padding: 10px 10px 10px;
}

.site-navigation .menu .sub-menu ul {
  left: 205px;
}

#site-navigation ul li a {
  background: transparent!important;
}

#site-navigation ul.sub-menu {
  background: #fff!important;
}

.site-navigation ul.sub-menu li:hover a {
  color: #fff;
}

.site-navigation ul.menu ul a,
.site-navigation ul.sub-menu ul.sub-menu li a {
  color: #000;
}

.site-navigation ul.menu ul.sub-menu li.current_page_item>a:first-child {
  color: #fff!important;
}

#site-navigation ul.sub-menu li:hover,
#site-navigation ul li:hover a:hover {
  background: #000!important;
  color: #fff!important;
}

/*.site-navigation ul.sub-menu ul.sub-menu li a,
.site-navigation ul.sub-menu li:hover ul.sub-menu li a,
.site-navigation .menu .sub-menu, .site-navigation .menu .children a {
  color: #000!important;
}*/

.site-navigation .menu .sub-menu {
  color: #000;
}

.site-navigation .sub-menu .sub-menu li a {
  color: #000!important; 
}

.site-navigation .menu li a {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 200;
}

/* ******* */

.list-block-item .entry-description .entry-head {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 200;
}

.link-icon {
  background-image: url('images/link-icon.png');
  background-repeat: no-repeat;
  background-position: top left;
  padding-left: 30px;
  line-height: 20px;
  min-height: 20px;
  display: block;
}

.fleftmargin {
  margin-right: 1em;
}

#page {
  padding-top: 0;
}

.branding {
  margin-left: 70px !important;
}

.socialnetworking {
  margin-right: 75px;
}

.socialnetworking .menu-language-menu-container,
.socialnetworking .share-items {
  margin-top: 0;
}

.socialnetworking .epa-logo {
  margin-top: 60px;
}

.inspicoslatestposts {
  margin-bottom: 1.5em;
}

.inspicoslatestposts .entry-head {
  line-height: 1em;
  font-size: 26px;
  margin-bottom: 10px;
}

#secondary .inspicoslatestposts .entry-header.first {
  background-color: #000;
}

.entry-title {
  line-height: 1em;
  margin-bottom: 10px;
}

.post-date {
  margin-bottom: 15px;
  display: block;
}

.entry-head,
.entry-head a:link,
.entry-head a:visited,
.entry-head a:active,
.entry-head a:hover {
  color: #002b65;
  text-decoration: none;
}
.entry-title a:link,
.entry-title a:visited,
.entry-title a:active,
.entry-title a:hover {
  color: #fff;
  text-decoration: none;
}

h2.entry-title {
  color: #fff;
}

.list-entry-content {
  padding: 1.5em;
}

.latest-item .entry-thumb img {
  float: left;
  border-radius: 50%;
  width: 160px;
  height: 160px;
  margin-top: 5px;
}

.latest-item .entry-head a {
  font-size: 100%;
  display: block;
}

.list-block-item:hover {
  background: none;
  animation-name: none;
  color: #333;
}
.list-block-item .entry-description .entry-head a:hover {
  color: #002b65;
}
.no-margin {
  margin: 0;
}

/*  ----------------------------------------------------------
  Share buttons
= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = */
.share-items li {
  background: #8C8F95!important;
}

.share-items .share-item-icon-search {
  margin-right: 1px;
}

.share-items .share-item-icon-search a:hover,
.share-items .share-item-icon-linkedin a:hover {
  background: #505050!important;
  animation-duration: 0s;
  animation-name: none;
}

.more-options.share-bt {position: relative; float: right;}

.more-options .share-buttons {
  position: absolute;
  top: 0px;
  right: 40px;
  width: 120px;
  margin: 0;
  padding: 0;
  display: none;
  background: #505050!important;

}
.share-click {
  cursor: pointer;
    font-size: 6px;
}

.entry-header .more-options.share-bt.square {
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;

}

.more-options .share-buttons li {
  float: left;
  display: inline;
  margin: 0;
  padding: 0;

  
}

.more-options .share-buttons li a{
  font-size: 18px;
  margin: 0;
  padding: 8px 0 0 0;
  height: 32px;
  width: 40px;
}

.more-options .share-buttons li a:hover{
  cursor: pointer;
}

.more-options .share-buttons li .share-icon-fb:hover{
  background: #3b5998;
}
.more-options .share-buttons li .share-icon-tw:hover{
  background: #00aced;
}
.more-options .share-buttons li .share-icon-pt:hover{
  background: #cb2027;
}

.entry-meta .more-options {
  float: right;
  background: #fff;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin-top: 8px;
}

.entry-meta .more-options a{
  display: block;
  width: 40px;
  height: 40px;
  text-align: center;
  color: #000;
  text-decoration: none;
  font-size: 16px;
  margin-top: 10px;
}

.entry-meta .more-options.share-bt.square {
    border-radius: 0px;
}

.entry-content-post {
  overflow: hidden;
}

.profile-image {
  width: 48%;
  float: left;
  margin-right: 20px;

}
.profile-intro {
  width: 48%;
  float: left;

}

.cv-year {
  float: left;
  width: 25%;
  margin-bottom: 20px;
  margin-top: 5px;
}
.cv-text {
  float: left;
  width: 65%;
  margin-bottom: 20px;
  margin-top: 5px;
}

/* FOOTER REGION */
.site-footer #status-info {
  background: #8c8f95!important;
}

.site-footer .textwidget a,
.site-footer .textwidget a:visited {
    color: #fff!important;
    text-decoration: none;
}

.site-footer .textwidget a.link-icon,
.site-footer .textwidget a.link-icon:visited {
    color: #505050!important;
}

.site-footer .entry-header {
  background: transparent;
  color: #505050;
}

.site-footer .first .widget .textwidget,
.site-footer .first .entry-header {
  padding-left: 40px;
}

.site-footer .first .entry-header {
  color: #002B65;
}

.site-footer .entry-header {
  padding-bottom: 0;
}

.site-footer .widget .textwidget {
  background: transparent;
  padding-top: 10px;
  color: #fff;
}

/* RESPNSIVE RULES */

@media only screen and (min-width: 962px) and (max-width: 1220px) {

}

@media only screen and (min-width: 767px) and (max-width: 962px) {
  .branding {
    margin-left: 20px!important;
  }
  .socialnetworking {
    margin-right: 20px;
  }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
  .branding {
    margin-left: 0px!important;
  }
  .socialnetworking {
    margin-right: 20px;
    margin-bottom: 10px;
  }
}

@media only screen and (min-width: 320px) and (max-width: 480px) {
  .branding {
    margin-left: 0px!important;
  }
  .socialnetworking {
    margin-right: 20px;
    margin-bottom: 10px;
  }
}

@media (max-width: 320px) {
  .branding {
    margin-left: 0px!important;
  }
  .socialnetworking {
    margin-right: 20px;
    margin-bottom: 10px;
  }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
  .cv-year,
  .cv-text {
    clear: both;
    width: 100%;
  }
  .cv-year {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 320px) and (max-width: 480px) {
  .cv-year,
  .cv-text {
    clear: both;
    width: 100%;
  }
  .cv-year {
    margin-bottom: 0;
  }
}

@media (max-width: 320px) {
  .cv-year,
  .cv-text {
    clear: both;
    width: 100%;
  }
  .cv-year {
    margin-bottom: 0;
  }
}

